fix loi upAPi, hien thi ten Socket khi nhan du lieu